-- Reconcile the Supabase schema with the tables and columns used by the runtime.
-- This migration is intentionally idempotent so it can be applied to existing projects.

create table if not exists public.hero_issue_stages (
  id bigint generated by default as identity primary key,
  hero_api_id integer not null references public.superheroes(api_id) on delete cascade,
  key text,
  name text not null,
  title text,
  label text,
  summary text,
  short_summary text,
  created_at timestamptz not null default timezone('utc', now()),
  updated_at timestamptz not null default timezone('utc', now())
);

-- `create table if not exists` does not reconcile partially provisioned tables.
alter table public.hero_issue_stages
  add column if not exists hero_api_id integer references public.superheroes(api_id) on delete cascade,
  add column if not exists key text,
  add column if not exists name text,
  add column if not exists title text,
  add column if not exists label text,
  add column if not exists summary text,
  add column if not exists short_summary text,
  add column if not exists created_at timestamptz not null default timezone('utc', now()),
  add column if not exists updated_at timestamptz not null default timezone('utc', now());

create index if not exists hero_issue_stages_hero_api_id_idx
  on public.hero_issue_stages (hero_api_id);

create unique index if not exists hero_issue_stages_hero_api_id_key_uidx
  on public.hero_issue_stages (hero_api_id, key)
  where key is not null;

alter table public.hero_issue_stages enable row level security;

drop policy if exists "Hero issue stages service writes" on public.hero_issue_stages;
create policy "Hero issue stages service writes" on public.hero_issue_stages
  for all
  to service_role
  using (true)
  with check (true);

drop policy if exists "Hero issue stages public read" on public.hero_issue_stages;
create policy "Hero issue stages public read" on public.hero_issue_stages
  for select
  to authenticated, public
  using (true);

alter table public.hero_issues
  add column if not exists timeline_order integer;

create index if not exists hero_issues_hero_api_id_timeline_order_idx
  on public.hero_issues (hero_api_id, timeline_order)
  where timeline_order is not null;

alter table public.hero_timelines
  add column if not exists stage_id bigint references public.hero_issue_stages(id) on delete set null,
  add column if not exists legacy_number text,
  add column if not exists special_issue boolean not null default false,
  add column if not exists hero_issue_id uuid references public.hero_issues(id) on delete set null;

create index if not exists hero_timelines_hero_issue_id_idx
  on public.hero_timelines (hero_issue_id)
  where hero_issue_id is not null;

-- Link legacy timeline rows to their canonical cached issue when metadata still contains a GCD id.
with timeline_gcd_ids as (
  select
    timeline.id,
    timeline.hero_api_id,
    case
      when coalesce(timeline.metadata ->> 'gcdIssueId', timeline.metadata ->> 'gcd_issue_id') ~ '^[0-9]{1,10}$'
        then coalesce(timeline.metadata ->> 'gcdIssueId', timeline.metadata ->> 'gcd_issue_id')::bigint
      else null
    end as gcd_issue_id
  from public.hero_timelines as timeline
  where timeline.hero_issue_id is null
)
update public.hero_timelines as timeline
set hero_issue_id = issue.id
from timeline_gcd_ids as legacy
join public.hero_issues as issue
  on issue.hero_api_id = legacy.hero_api_id
 and issue.gcd_issue_id = legacy.gcd_issue_id
where timeline.id = legacy.id
  and legacy.gcd_issue_id is not null;

create table if not exists public.collected_editions (
  id uuid primary key default gen_random_uuid(),
  hero_api_id integer not null references public.superheroes(api_id) on delete cascade,
  title text not null,
  subtitle text,
  series_title text,
  print_language text,
  publisher text,
  publication_date text,
  cover_date text,
  description text,
  page_count integer,
  format text not null default 'unknown',
  cover_image_url text,
  source text not null default 'gcd',
  source_external_id text,
  source_series_id integer,
  isbn text,
  source_payload jsonb,
  created_at timestamptz not null default timezone('utc', now()),
  updated_at timestamptz not null default timezone('utc', now())
);

alter table public.collected_editions
  add column if not exists hero_api_id integer references public.superheroes(api_id) on delete cascade,
  add column if not exists title text,
  add column if not exists subtitle text,
  add column if not exists series_title text,
  add column if not exists print_language text,
  add column if not exists publisher text,
  add column if not exists publication_date text,
  add column if not exists cover_date text,
  add column if not exists description text,
  add column if not exists page_count integer,
  add column if not exists format text not null default 'unknown',
  add column if not exists cover_image_url text,
  add column if not exists source text not null default 'gcd',
  add column if not exists source_external_id text,
  add column if not exists source_series_id integer,
  add column if not exists isbn text,
  add column if not exists source_payload jsonb,
  add column if not exists created_at timestamptz not null default timezone('utc', now()),
  add column if not exists updated_at timestamptz not null default timezone('utc', now());

create index if not exists collected_editions_hero_api_id_idx
  on public.collected_editions (hero_api_id);

create index if not exists collected_editions_source_external_id_idx
  on public.collected_editions (source_external_id)
  where source_external_id is not null;

alter table public.collected_editions enable row level security;

drop policy if exists "Collected editions service writes" on public.collected_editions;
create policy "Collected editions service writes" on public.collected_editions
  for all
  to service_role
  using (true)
  with check (true);

drop policy if exists "Collected editions public read" on public.collected_editions;
create policy "Collected editions public read" on public.collected_editions
  for select
  to authenticated, public
  using (true);

create table if not exists public.collected_edition_issue_links (
  id uuid primary key default gen_random_uuid(),
  collected_edition_id uuid not null references public.collected_editions(id) on delete cascade,
  hero_issue_id uuid not null references public.hero_issues(id) on delete cascade,
  notes text,
  created_at timestamptz not null default timezone('utc', now()),
  updated_at timestamptz not null default timezone('utc', now()),
  unique (collected_edition_id, hero_issue_id)
);

alter table public.collected_edition_issue_links
  add column if not exists collected_edition_id uuid references public.collected_editions(id) on delete cascade,
  add column if not exists hero_issue_id uuid references public.hero_issues(id) on delete cascade,
  add column if not exists notes text,
  add column if not exists created_at timestamptz not null default timezone('utc', now()),
  add column if not exists updated_at timestamptz not null default timezone('utc', now());

create index if not exists collected_edition_issue_links_hero_issue_id_idx
  on public.collected_edition_issue_links (hero_issue_id);

alter table public.collected_edition_issue_links enable row level security;

drop policy if exists "Collected edition links service writes" on public.collected_edition_issue_links;
create policy "Collected edition links service writes" on public.collected_edition_issue_links
  for all
  to service_role
  using (true)
  with check (true);

drop policy if exists "Collected edition links public read" on public.collected_edition_issue_links;
create policy "Collected edition links public read" on public.collected_edition_issue_links
  for select
  to authenticated, public
  using (true);

create table if not exists public.user_issue_states (
  id uuid primary key default gen_random_uuid(),
  user_id uuid not null references auth.users(id) on delete cascade,
  issue_id uuid not null references public.hero_timelines(id) on delete cascade,
  have_it boolean not null default false,
  read_it boolean not null default false,
  created_at timestamptz not null default timezone('utc', now()),
  updated_at timestamptz not null default timezone('utc', now()),
  unique (user_id, issue_id)
);

alter table public.user_issue_states
  add column if not exists user_id uuid references auth.users(id) on delete cascade,
  add column if not exists issue_id uuid references public.hero_timelines(id) on delete cascade,
  add column if not exists have_it boolean not null default false,
  add column if not exists read_it boolean not null default false,
  add column if not exists created_at timestamptz not null default timezone('utc', now()),
  add column if not exists updated_at timestamptz not null default timezone('utc', now());

create index if not exists user_issue_states_user_id_idx
  on public.user_issue_states (user_id);

alter table public.user_issue_states enable row level security;

drop policy if exists "Issue states service writes" on public.user_issue_states;
create policy "Issue states service writes" on public.user_issue_states
  for all
  to service_role
  using (true)
  with check (true);

drop policy if exists "Issue states own read" on public.user_issue_states;
create policy "Issue states own read" on public.user_issue_states
  for select
  to authenticated
  using (auth.uid() = user_id);

create table if not exists public.user_issue_collected_editions (
  id uuid primary key default gen_random_uuid(),
  user_id uuid not null references auth.users(id) on delete cascade,
  issue_id uuid not null references public.hero_timelines(id) on delete cascade,
  collected_edition_id uuid not null references public.collected_editions(id) on delete cascade,
  created_at timestamptz not null default timezone('utc', now()),
  updated_at timestamptz not null default timezone('utc', now()),
  unique (user_id, issue_id, collected_edition_id)
);

alter table public.user_issue_collected_editions
  add column if not exists user_id uuid references auth.users(id) on delete cascade,
  add column if not exists issue_id uuid references public.hero_timelines(id) on delete cascade,
  add column if not exists collected_edition_id uuid references public.collected_editions(id) on delete cascade,
  add column if not exists created_at timestamptz not null default timezone('utc', now()),
  add column if not exists updated_at timestamptz not null default timezone('utc', now());

create index if not exists user_issue_collected_editions_user_issue_idx
  on public.user_issue_collected_editions (user_id, issue_id);

create index if not exists user_issue_collected_editions_user_edition_idx
  on public.user_issue_collected_editions (user_id, collected_edition_id);

alter table public.user_issue_collected_editions enable row level security;

drop policy if exists "Issue collected editions service writes" on public.user_issue_collected_editions;
create policy "Issue collected editions service writes" on public.user_issue_collected_editions
  for all
  to service_role
  using (true)
  with check (true);

drop policy if exists "Issue collected editions own read" on public.user_issue_collected_editions;
create policy "Issue collected editions own read" on public.user_issue_collected_editions
  for select
  to authenticated
  using (auth.uid() = user_id);

create table if not exists public.login_audit (
  id uuid primary key default gen_random_uuid(),
  user_id uuid not null references auth.users(id) on delete cascade,
  email text,
  source text not null default 'web_app',
  metadata jsonb,
  created_at timestamptz not null default timezone('utc', now())
);

alter table public.login_audit
  add column if not exists user_id uuid references auth.users(id) on delete cascade,
  add column if not exists email text,
  add column if not exists source text not null default 'web_app',
  add column if not exists metadata jsonb,
  add column if not exists created_at timestamptz not null default timezone('utc', now());

create index if not exists login_audit_user_id_created_at_idx
  on public.login_audit (user_id, created_at desc);

alter table public.login_audit enable row level security;

drop policy if exists "Login audit own insert" on public.login_audit;
create policy "Login audit own insert" on public.login_audit
  for insert
  to authenticated
  with check (auth.uid() = user_id);

drop policy if exists "Login audit service reads" on public.login_audit;
create policy "Login audit service reads" on public.login_audit
  for select
  to service_role
  using (true);

create or replace function public.set_runtime_updated_at()
returns trigger as $$
begin
  new.updated_at = timezone('utc', now());
  return new;
end;
$$ language plpgsql;

drop trigger if exists trg_set_hero_issue_stages_updated_at on public.hero_issue_stages;
create trigger trg_set_hero_issue_stages_updated_at
before update on public.hero_issue_stages
for each row execute procedure public.set_runtime_updated_at();

drop trigger if exists trg_set_collected_editions_updated_at on public.collected_editions;
create trigger trg_set_collected_editions_updated_at
before update on public.collected_editions
for each row execute procedure public.set_runtime_updated_at();

drop trigger if exists trg_set_collected_edition_issue_links_updated_at on public.collected_edition_issue_links;
create trigger trg_set_collected_edition_issue_links_updated_at
before update on public.collected_edition_issue_links
for each row execute procedure public.set_runtime_updated_at();

drop trigger if exists trg_set_user_issue_states_updated_at on public.user_issue_states;
create trigger trg_set_user_issue_states_updated_at
before update on public.user_issue_states
for each row execute procedure public.set_runtime_updated_at();

drop trigger if exists trg_set_user_issue_collected_editions_updated_at on public.user_issue_collected_editions;
create trigger trg_set_user_issue_collected_editions_updated_at
before update on public.user_issue_collected_editions
for each row execute procedure public.set_runtime_updated_at();

insert into storage.buckets (id, name, public)
values ('avatars', 'avatars', false)
on conflict (id) do update
set public = excluded.public;

drop policy if exists "Avatar owners can read" on storage.objects;
create policy "Avatar owners can read" on storage.objects
  for select
  to authenticated
  using (
    bucket_id = 'avatars'
    and (storage.foldername(name))[1] = auth.uid()::text
  );

drop policy if exists "Avatar owners can upload" on storage.objects;
create policy "Avatar owners can upload" on storage.objects
  for insert
  to authenticated
  with check (
    bucket_id = 'avatars'
    and (storage.foldername(name))[1] = auth.uid()::text
  );

drop policy if exists "Avatar owners can update" on storage.objects;
create policy "Avatar owners can update" on storage.objects
  for update
  to authenticated
  using (
    bucket_id = 'avatars'
    and (storage.foldername(name))[1] = auth.uid()::text
  )
  with check (
    bucket_id = 'avatars'
    and (storage.foldername(name))[1] = auth.uid()::text
  );

drop policy if exists "Avatar owners can delete" on storage.objects;
create policy "Avatar owners can delete" on storage.objects
  for delete
  to authenticated
  using (
    bucket_id = 'avatars'
    and (storage.foldername(name))[1] = auth.uid()::text
  );
